--- a/frontend/app.json
+++ b/frontend/app.json
@@ -17,7 +17,11 @@
 
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.cofau.app"
+      "bundleIdentifier": "com.cofau.app",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "Allow Cofau to access your photo library for uploading posts.",
+        "NSCameraUsageDescription": "Allow Cofau to access your camera for taking pictures."
+      }
     },
 
     "android": {
@@ -26,7 +30,12 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "permissions": [],
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "INTERNET"
+      ],
       "allowBackup": false
     },
 
@@ -59,6 +68,10 @@
       "eas": {
         "projectId": "2094671e-9a3c-410d-bfcd-aa523cffdf86"
       }
+    },
+
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
