--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "optimize-badges": "node ./scripts/optimize-badges.js",
+    "prebuild": "npm run optimize-badges",
+    "build:android:production": "eas build --platform android --profile production",
+    "build:android:preview": "eas build --platform android --profile preview",
+    "build:android:dev": "eas build --platform android --profile development"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
@@ -52,6 +57,7 @@
     "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "sharp": "^0.33.5",
     "typescript": "~5.9.2"
   },
   "private": true,
