Updated the Coddee

--- a/backend_nginx_config.conf
+++ b/backend_nginx_config.conf
@@ -19,21 +19,31 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # WebSocket support for chat
-    location /api/chat/ws/ {
+    # WebSocket support for chat - match exact path pattern
+    location ~ ^/api/chat/ws/[^/]+$ {
         proxy_pass http://127.0.0.1:8000;
         
         proxy_http_version 1.1;
+        
+        # WebSocket upgrade headers (critical for WebSocket)
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        
+        # Standard proxy headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-        proxy_read_timeout 300;
+        # Disable buffering for WebSocket (important!)
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_request_buffering off;
+        
+        # Extended timeouts for long-lived WebSocket connections (7 days)
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
     }
 
     location / {
