Add Instagram-style continuous scroll feed, fix push notification errors, and improve error handling

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -31,7 +31,8 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
-        "INTERNET"
+        "INTERNET",
+        "RECEIVE_BOOT_COMPLETED"
       ],
       "allowBackup": false
     },
@@ -49,7 +50,15 @@
           "backgroundColor": "#FFFFFF"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#4dd0e1",
+          "sounds": []
+        }
+      ]
     ],
     "updates": {
       "fallbackToCacheTimeout": 0
