--- a/backend_nginx_config.conf
+++ b/backend_nginx_config.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name backend.cofau.com;
+    server_name api.cofau.com;
 
     # Redirect all HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -9,13 +9,13 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name backend.cofau.com;
+    server_name api.cofau.com;
 
     client_max_body_size 300M;
 
     # SSL Certificates
-    ssl_certificate /etc/letsencrypt/live/backend.cofau.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/backend.cofau.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.cofau.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.cofau.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
