--- a/frontend/app.json
+++ b/frontend/app.json
@@ -17,7 +17,11 @@
       "bundleIdentifier": "com.cofau.app",
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow Cofau to access your photo library for uploading posts.",
-        "NSCameraUsageDescription": "Allow Cofau to access your camera for taking pictures."
+        "NSCameraUsageDescription": "Allow Cofau to access your camera for taking pictures.",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        },
+        "UIBackgroundModes": ["audio"]
       }
     },
     "android": {
