--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.8",
     "expo-notifications": "^0.32.13",
     "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
@@ -56,6 +57,7 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-intersection-observer": "^0.2.1",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
