--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -44,9 +45,11 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-notifications": "^0.32.13",
     "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -61,6 +64,7 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.6.1"
