--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -25,6 +25,7 @@
       }
     },
     "production": {
+      "distribution": "store",
       "android": {
         "buildType": "app-bundle"
       },
