--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,11 @@ android-sdk/
 # Environment files
 *.env
 *.env.*
--e 
-# Environment files
-*.env
-*.env.*
+
+# Secrets and credentials (DO NOT COMMIT)
+backend/secrets/
+**/secrets/
+**/*firebase-adminsdk*.json
+**/*service-account*.json
+**/*credentials*.json
+**/*-adminsdk-*.json
