--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,8 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "23.8.4",
-    "@react-native-firebase/auth": "23.8.4",
-    "@react-native-firebase/messaging": "23.8.4",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-firebase/auth": "^23.8.3",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
