--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
+    "expo-document-picker": "~13.0.3",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
