--- a/frontend/app.json
+++ b/frontend/app.json
@@ -16,10 +16,10 @@
       "supportsTablet": true,
       "buildNumber": "4",
       "bundleIdentifier": "com.cofau.app",
-      "googleServicesFile": "./GoogleService-Info.plist",
+      "googleServicesFile": "./GoogleService-Info.plist", 
       "config": {
-        "googleMapsApiKey": "AIzaSyDLBWLLuXT7hMU2LySIervGx6b2iZwWqyE"
-      },
+               "googleMapsApiKey": "AIzaSyDLBWLLuXT7hMU2LySIervGx6b2iZwWqyE"
+       },
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Cofau needs photo library access to let you upload photos and videos of your food and dining experiences to share in your restaurant reviews.",
         "NSCameraUsageDescription": "Cofau needs camera access to let you capture photos and videos of your food and dining experiences to share in your restaurant reviews.",
@@ -65,6 +65,15 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "./withModularHeaders",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -101,7 +110,8 @@
         }
       ],
       "@react-native-firebase/auth",
-      "./plugins/withAndroidManifestFix.js"
+      "./plugins/withAndroidManifestFix.js",
+      "expo-router"
     ],
     "updates": {
       "fallbackToCacheTimeout": 0
