--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,23 +3,9 @@
   "main": "expo-router/entry",
   "version": "1.0.1",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
+    "postinstall": "node ./scripts/patch-expo-maps.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "optimize-badges": "node ./scripts/optimize-badges.js",
-    "prebuild": "npm run optimize-badges",
-    "clean": "node -e \"const fs=require('fs');['.expo','node_modules/.cache','.metro','android','ios','dist','build'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true})}catch(e){}})\"",
-    "clean:cache": "npm cache clean --force",
-    "build:android:production": "eas build --platform android --profile production --clear-cache",
-    "build:android:preview": "eas build --platform android --profile preview --clear-cache",
-    "build:android:dev": "eas build --platform android --profile development --clear-cache",
-    "build:android:apk": "npm run clean && eas build --platform android --profile preview --clear-cache",
-    "build:ios:preview": "eas build --platform ios --profile preview --clear-cache",
-    "build:ios:production": "eas build --platform ios --profile production --clear-cache",
-    "build:ios:ipa": "npm run clean && eas build --platform ios --profile preview --clear-cache"
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
@@ -33,12 +19,13 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.13.2",
-    "expo": "^54.0.27",
+    "expo": "~54.0.33",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
-    "expo-document-picker": "~13.0.3",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -50,7 +37,7 @@
     "expo-location": "~19.0.8",
     "expo-media-library": "~18.2.1",
     "expo-notifications": "^0.32.13",
-    "expo-router": "~6.0.14",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.7",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.10",
@@ -64,13 +51,13 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-intersection-observer": "^0.2.1",
-    "react-native-maps": "1.20.1",
+    "react-native-maps": "^1.27.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.6.1"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
