--- a/frontend/ios/Cofau/Info.plist
+++ b/frontend/ios/Cofau/Info.plist
@@ -29,6 +29,7 @@
         <array>
           <string>cofau</string>
           <string>com.cofau.app</string>
+          <string>com.googleusercontent.apps.797358811494-v1rloljbhms1551nklibnfnpcipqak3h</string>
         </array>
       </dict>
     </array>
