--- a/frontend/app.json
+++ b/frontend/app.json
@@ -51,6 +51,7 @@
         "INTERNET",
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE",
+        "POST_NOTIFICATIONS",
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION"
       ],
