--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/slider": "5.0.1",
     "@react-native-firebase/app": "^23.8.4",
     "@react-native-firebase/auth": "^23.8.3",
+    "@react-native-firebase/messaging": "^23.8.6",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
