--- a/frontend/app.json
+++ b/frontend/app.json
@@ -100,7 +100,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/icon.png",
+          "icon": "./assets/notification-icon.png",
           "color": "#4dd0e1",
           "sounds": [],
           "defaultChannel": "default_v3"
